Fixed spacing and sizing issues

--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,6 @@
 .divider {
     height: 2px;
     width: 100%;
-    margin: 2em 0;
+    margin: 2em 0 1em 0;
 }
 
